2018-12-15  Jacob Bachmeyer  <jcb62281@gmail.com>

	* testsuite/lib/runtest.exp: Use 'testsuite file' to locate the
	default runtest executable instead of implicitly searching PATH.
	Remove unused RUNTESTFLAGS Tcl variable.

2018-12-15  Jacob Bachmeyer  <jcb62281@gmail.com>

	* testsuite/lib/runtest.exp (runtest_start): Remove unused global
	variable links.

2018-12-14  Jacob Bachmeyer  <jcb62281@gmail.com>

	* lib/framework.exp (log_summary): Remove "testcnt" mechanism.
	* testsuite/lib/libsup.exp: Remove obsolete "testcnt" variable.

2018-12-12  Ben Elliston  <bje@gnu.org>

	* config/gdb-comm.exp, config/gdb_stub.exp, config/vxworks.exp,
	lib/dg.exp, lib/ftp.exp, lib/kermit.exp, lib/rlogin.exp,
	lib/telnet.exp, runtest.exp, testsuite/lib/libsup.exp: Simplify
	some regular expressions in constant strings by placing them
	inside braces instead of quotes. This allows one level of
	backslash quoting to be removed.

2018-12-12  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Acknowledge contributions to the manual from
	others.

2018-12-11  Jacob Bachmeyer  <jcb62281@gmail.com>

	* testsuite/runtest.all/libs.exp: Use "testsuite file" command.
	* testsuite/runtest.all/load_lib.exp: Likewise.
	* testsuite/runtest.all/stats.exp: Likewise.

	* testsuite/runtest.all/stats.exp: Write local init file as
	"stats-init.exp" for status summary tests.  Use --local_init
	option to runtest to load that file instead of site.exp and move
	the inner test module to a nested testsuite.
	* testsuite/runtest.all/stats-sub.exp: Move file from here ..
	* testsuite/runtest.all/stats/testsuite/stat.test/stats-sub.exp:
	.. to here.

	* testsuite/runtest.all/options.exp: Clean up whitespace in file.
	Wrap lines in test list and move short items to beginning of list.
	Write local init file as "options-init.exp" for options tests.
	Use --local_init option with nested runtest to load that file
	instead of site.exp; also create an empty nested testsuite.  Local